--- a/first.html
+++ b/first.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
     <h1> Web Developing </h1>
-<h2> Work Hard! </h2>
-<h3><p> Play Hard </p></h3>
+    <h2> Work Hard! </h2>
+    <h3><p> Play Hard </p></h3>
     <h4>Get Paid <3</h4>
 
 <p> <b>I am dedicated, Motivated, and focused</b></p>
@@ -44,7 +45,7 @@ Unordered list
 </form>
 <p><a href="https://www.facebook.com/fazla.rabbe.52/">Go to Facebook</a></p>
 <p>Now watch some pictures</p>
-<img src="mr-bean.png"></img>
 <img src="Crush/nora-fatehi-6-16478569143x2.webp"></img>
+<img src="mr-bean.png" alt="">
 </body>
 </html>
